--- a/CalorieApp/AppShell.xaml
+++ b/CalorieApp/AppShell.xaml
@@ -1,15 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 <Shell
     x:Class="CalorieApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:CalorieApp"
     Shell.FlyoutBehavior="Disabled"
-    Title="CalorieApp">
+    Title=""
+    TitleColor="#010104"
+    TabBarUnselectedColor="DarkGray"
+    TabBarTitleColor="#010104"
+    BackgroundColor="#FCFDFC"
+    TabBarBackgroundColor="#FCFDFC">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:MainPage}" />
 
 </Shell>
